# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "farm"
version = "1.0.0"
description = ""
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.22.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "transformers",
    "Pillow",
    "scikit-learn",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "tune_clip"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "farm.server_app:app"
clientapp = "farm.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
num-rounds-for-sim-train = 2 #it is new one####################################################
num-server-rounds = 4
num-supernodes = 10
fraction-train = 0.5
local-epochs = 10
lr = 0.0005
alpha = 1.0  # Weight for simulation loss
beta = 1.0   # Weight for classification loss

# List of configs to run (comma-separated)
# Run one config: "100_text_100_audio_100_video"
# Run multiple configs: "100_text_100_audio_100_video, complex_20_30_20_10_15_5_0, 50_text_50_audio_50_video"
missing-configs = "100_image_100_text" #"100_image_100_text, 100_image_20_text,20_image_100_text,complex_20_40_40, complex_10_45_45, complex_30_35_35"

# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation with 4 virtual SuperNodes
[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 8
options.backend.client-resources.num-gpus = 1  # Allocate GPU fraction per client

# Remote federation example for use with SuperLink
[tool.flwr.federations.remote-federation]
address = "<SUPERLINK-ADDRESS>:<PORT>"
insecure = true  # Remove this line to enable TLS
# root-certificates = "<PATH/TO/ca.crt>"  # For TLS setup
